# rt

./: .gitignore  CMakeLists.txt  README.md  background.cpp  background.hpp  out.ppm
lib/ssmath/: mat3.hpp  mat4.hpp  ssmath.hpp  vec2.hpp  vec3.hpp  vec4.hpp
scenes/: scene01.xml  scene02.xml  scene03.xml  scene04.xml
scenes/proj-02/: scene01.xml
scenes/proj-03/: scene01.xml  scene02.xml  scene03.xml
scenes/proj-04/: geometry_spheres.xml  scene01.xml  scene02.xml
scenes/proj-05/: scene02.xml  teste.xml  teste_wb.xml
scenes/proj-06/rows_mirror_spheres/: strip_of_spheres.xml
scenes/proj-07/: three_spheres.xml
scenes/proj-07/teapot_cel/: teapot_geometry.xml  teapot_materials.xml  teapot_scene.xml
scenes/proj-07/teapot_scene/: teapot_geometry.xml  teapot_scene.xml
scenes/proj-07/three_spheres/: three_spheres_above.xml  three_spheres_below.xml
scenes/proj-08/teapot_scene/: teapot_geometry.xml  teapot_scene.xml
scenes/proj-09/: 01_basic_2_spheres.xml  01_basic_2_spheres_geometry.xml  02_teapot_scaled.xml  02_teapot_scaled_geometry.xml  03_dinning_chair.xml  03_dinning_set.xml  03_dinning_set_geometry.xml  03_dinning_table.xml
src/core/: api.cpp  api.hpp  app.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  common.hpp  film.cpp  film.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  main.cpp  paramset.cpp  paramset.hpp  parser.cpp  parser.hpp  ray.cpp  ray.hpp  scenes.cpp  scenes.hpp  transform.cpp  transform.hpp  utils.hpp
src/core/integrators/: blinnPhongIntegrator.cpp  blinnPhongIntegrator.hpp  depth_integrator.cpp  depth_integrator.hpp  include_integrator.hpp  integrator.cpp  integrator.hpp  normalMapIntegrator.cpp  normalMapIntegrator.hpp  rayCastIntegrator.cpp  rayCastIntegrator.hpp  toonIntegrator.cpp  toonIntegrator.hpp
src/core/light/: ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  light.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp  visibilityTester.cpp  visibilityTester.hpp
src/core/materials/: include_material.hpp  material.hpp  toon_material.hpp
src/core/primitives/: bvh_accel.cpp  bvh_accel.hpp  fbounds.cpp  fbounds.hpp  include_primitive.hpp  plane.hpp  primitive.cpp  primitive.hpp  scenes.cpp  shape.hpp  sphere.cpp  sphere.hpp  surfel.cpp  surfel.hpp  transPrimitive.cpp  transPrimitive.hpp  triangle.cpp  triangle.hpp
src/msg_system/: error.cpp
